# COAT-INT8

./: .gitignore  .gitmodules  .pre-commit-config.yaml  COAT-Internal  README.md  environment_setup.sh  matmul_summary.txt  pyproject.toml
benchmark/: benchmark_deepseek_linear.py  benchmark_gelu.py  benchmark_linear.py  benchmark_linear_kernel.py  benchmark_linear_layer.py  benchmark_llamalayer.py  benchmark_olmolayer.py
coat/: fp8_trainer.py
coat/activation/deepseek/: fp8linear.py  linear.py
coat/activation/models/: _fp8_quantization_config.py  coat_llama_convert_from_hf.py
coat/activation/real_quantization/: _quantize_perblock_pergroup.py  int8linear.py  linear.py
coat/models/: coat_llama.py  coat_llama_convert_from_hf.py
coat/optimizer/: fp8_adamw.py
coat/optimizer/kernels/: setup.py
coat/optimizer/kernels/csrc_expand_quantize/: nvcc_qoptim.cu
coat/optimizer/kernels/csrc_origin_quantize/: nvcc_qoptim.cu
coat/optimizer/kernels/include/: fp8_adamw.h  fp8_adamw_expand.h
docs/: pypi.md
examples/OLMo/: .gitignore  pyproject.toml
examples/OLMo/configs/coat/: OLMo-1B-COAT-Activation.yaml  OLMo-1B-COAT-Both.yaml  OLMo-1B-COAT-Optimizer.yaml  OLMo-7B-COAT-Activation.yaml  OLMo-7B-COAT-Both-MemBench.yaml  OLMo-7B-COAT-Both.yaml  (+2 more)
examples/OLMo/olmo/: checkpoint.py  config.py  model.py  optim.py  train.py
examples/OLMo/scripts/: train.py
examples/ToolBench/preprocess/: unzip_finetune_data.py
examples/ToolBench/scripts/: llama_convert_from_hf.sh  train_toolllama_bf16.sh  train_toolllama_fp8.sh
tests/: test_fp8_linear.py  test_int8_matmul.py
(+11 files in other folders)
